Add parameters for AAD OAuth

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <title>onedrive explorer</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script id="odauth" src="odauth.js"
+<!--  <script id="odauth" src="odauth.js"
    clientId="0000000048144E4F" scopes="onedrive.readonly wl.signin"
-   redirectUri="https://onedrive.github.io/odx/callback.html"></script>
+   redirectUri="https://onedrive.github.io/odx/callback.html"></script>-->
+  <script id="odauth" src="odauth.js"
+    clientId="50b5a58e-71e3-49c3-b5ad-67cf0cd4f19d"
+    resourceUri="https://prepsp-my.spoppe.com/"
+    redirectUri="https://onedrive-explorer-test.azurewebsites.net/callback.html"></script>
 </head>
 <body>
   <div id="od-loading"></div>
