--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script id="odauth" src="odauth.js"
     clientId="50b5a58e-71e3-49c3-b5ad-67cf0cd4f19d"
     resourceUri="https://prepsp-my.spoppe.com/"
-    redirectUri="https://onedrive-explorer-test.azurewebsites.net/callback.html"></script>
+    redirectUri="https://onedrive-explorer-test.azurewebsites.net/callback.html"
+    authServiceUri="https://login.windows.net/common/oauth2/authorize"></script>
 </head>
 <body>
   <div id="od-loading"></div>
