--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     clientId="50b5a58e-71e3-49c3-b5ad-67cf0cd4f19d"
     resourceUri="https://prepsp-my.spoppe.com/"
     redirectUri="https://onedrive-explorer-test.azurewebsites.net/callback.html"
-    authServiceUri="https://login.windows.net/common/oauth2/authorize"></script>
+    authServiceUri="https://login.windows-ppe.net/common/oauth2/authorize"></script>
 </head>
 <body>
   <div id="od-loading"></div>
