--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="od-json" class="od-pagecol"></div>
   </div>
   <script>
-    var oneDriveApiRoot = "https://api.onedrive.com/v1.0";
+    var oneDriveApiRoot = "https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net/_api/v2.0/";
 
     // we use the url fragment to specify the file path within onedrive
     // (eg. #/pictures/foo.jpg), so we bind to the hashchange event to
