--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="od-json" class="od-pagecol"></div>
   </div>
   <script>
-    var oneDriveApiRoot = "https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net/_api/v2.0/";
+    var oneDriveApiRoot = "https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net/_api/v2.0";
 
     // we use the url fragment to specify the file path within onedrive
     // (eg. #/pictures/foo.jpg), so we bind to the hashchange event to
@@ -140,7 +140,7 @@
           // we could also pass it in through the 'Authorization: bearer' header,
           // but that would result in an extra CORS preflight request for every
           // unique path.
-          var odquery = "?expand=thumbnails,children(expand=thumbnails(select=large,c200x150_Crop))";
+          var odquery = ""; //"?expand=thumbnails,children(expand=thumbnails(select=large,c200x150_Crop))";
 
           $.ajax({
             url: odurl + odquery,
