--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           // we could also pass it in through the 'Authorization: bearer' header,
           // but that would result in an extra CORS preflight request for every
           // unique path.
-          var odquery = ""; //"?expand=thumbnails,children(expand=thumbnails(select=large,c200x150_Crop))";
+          var odquery = "?expand=children";
 
           $.ajax({
             url: odurl + odquery,
