--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       function signOut()
       {
-        clearCookie();
+        logoutOfAuth();
         document.getElementById("od-breadcrumb").empty();
         document.getElementById("od-items").empty();
         document.getElementById("od-json").empty();
