add () to signOut

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <a href="#" onclick="signInToOneDrive(false)">Sign in to OneDrive for Business</a>
   </div>
   <div id="od-logoff" style="display: hidden">
-    <a href="#" onclick="signOut">Sign Out</a>
+    <a href="#" onclick="signOut()">Sign Out</a>
   </div>
   <div id="od-loading"></div>
   <div id="od-breadcrumb"></div>
