Use jquery for empty

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       function signOut()
       {
         logoutOfAuth();
-        document.getElementById("od-breadcrumb").empty();
-        document.getElementById("od-items").empty();
-        document.getElementById("od-json").empty();
+        $('#od-breadcrumb').empty();
+        $('#od-items').empty();
+        $('#od-json').empty();
         location.reload();
       }
     </script>
