Change to rgregg

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div id="od-login" style="display: hidden">
-    OneDrive URL: <input id="onedriveUrl" type="text" value="https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net/_api/v2.0" style="width: 400px" /><br /><br />
+    OneDrive URL: <input id="onedriveUrl" type="text" value="https://msft-my.spoppe.com/personal/rgregg_microsoft_com/_api/v2.0" style="width: 400px" /><br /><br />
     <a href="#" onclick="signInToOneDrive(true)">Sign in to OneDrive</a>&nbsp;&nbsp;
     <a href="#" onclick="signInToOneDrive(false)">Sign in to OneDrive for Business</a>
   </div>
