--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             "authServiceUri": "https://login.windows-ppe.net/common/oauth2/authorize"
           };
           provideAppInfo(businessAppInfo);
-          oneDriveApiRoot = document.getElementById("onedriveUrl").value;
+          oneDriveApiRoot = document.getElementById("onedriveUrl").value + "/_api/v2.0";
           showThumbnails = false;
           challengeForAuth();
         }
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div id="od-login" style="display: hidden">
-    OneDrive URL: <input id="onedriveUrl" type="text" value="https://msft-my.spoppe.com/personal/rgregg_microsoft_com/_api/v2.0" style="width: 400px" /><br /><br />
+    ODB URL: <input id="onedriveUrl" type="text" value="https://msft-my.spoppe.com/personal/rgregg_microsoft_com" style="width: 400px" /><br /><br />
     <a href="#" onclick="signInToOneDrive(true)">Sign in to OneDrive</a>&nbsp;&nbsp;
     <a href="#" onclick="signInToOneDrive(false)">Sign in to OneDrive for Business</a>
   </div>
