--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     addClass("oneup").
                     appendTo("#od-items");
 
-                  var downloadUrl = data['@content.downloadUrl'];
+                  var downloadUrl = data['webUrl'];
                   if (downloadUrl) {
                     tile.click(function(){window.location = downloadUrl;});
                   }
