--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                  "path": a.pathname }
       }
 
+      function setOneDriveTitle(title)
+      {
+          var element = document.elementById("od-site");
+          element.innerText = title;
+      }
+      
       function signInToOneDrive(personal)
       {
         if (personal)
@@ -40,6 +46,7 @@
           provideAppInfo(personalAppInfo);
           oneDriveApiRoot = "https://api.onedrive.com/v1.0";
           showThumbnails = true;
+          setOneDriveTitle("OneDrive - Personal");
           challengeForAuth();
         }
         else
@@ -56,6 +63,7 @@
           provideAppInfo(businessAppInfo);
           oneDriveApiRoot = document.getElementById("onedriveUrl").value + "/_api/v2.0";
           showThumbnails = false;
+          setOneDriveTitle("OneDrive for Business");
           challengeForAuth();
         }
         saveToCookie( { "apiRoot": oneDriveApiRoot, "thumbs": showThumbnails, "signedin": true } );
@@ -110,6 +118,7 @@
     </script>
 </head>
 <body>
+  <div id="od-site" style="background-color: #094AB2; color: white; width: 100%; height: 50px; font-size: 24pt; font-family: 'Segoe UI'; margin-bottom: 10px; padding-left: 10px;">Choose a OneDrive</div>
   <div id="od-login" style="display: hidden">
     ODB URL: <input id="onedriveUrl" type="text" value="https://msft-my.spoppe.com/personal/rgregg_microsoft_com" style="width: 400px" /><br /><br />
     <a href="#" onclick="signInToOneDrive(true)">Sign in to OneDrive</a>&nbsp;&nbsp;
