--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       function setOneDriveTitle(title)
       {
-          var element = document.elementById("od-site");
+          var element = document.getElementById("od-site");
           element.innerText = title;
       }
       
