Hide a little more of where the field was

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
   <div id="od-site" style="background-color: #094AB2; color: white; width: 100%; height: 50px; font-size: 24pt; font-family: 'Segoe UI'; margin-bottom: 10px; padding-left: 10px;">Choose a OneDrive</div>
   <div id="od-login" style="display: hidden">
-    ODB URL: <input id="onedriveUrl" type="hidden" value="https://microsoft-my.sharepoint.com/personal/rgregg_microsoft_com" style="width: 400px" /><br /><br />
+    <input id="onedriveUrl" type="hidden" value="https://microsoft-my.sharepoint.com/personal/rgregg_microsoft_com" style="width: 400px" />
     <a href="#" onclick="signInToOneDrive(true)">Sign in to OneDrive</a>&nbsp;&nbsp;
     <a href="#" onclick="signInToOneDrive(false)">Sign in to OneDrive for Business</a>
   </div>
