--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
           "authServiceUri": "https://login.windows.net/common/oauth2/authorize"
         };
 
-        provideAppInfo(businessProductionAppInfo);
+        if (getQueryVariable("ppe") == 1)
+          provideAppInfo(businessPreproductionAppInfo);
+        else
+          provideAppInfo(businessProductionAppInfo);
+
         oneDriveApiRoot = document.getElementById("onedriveUrl").value + "/_api/v2.0";
         showThumbnails = false;
         setOneDriveTitle("OneDrive for Business");
@@ -123,6 +127,17 @@
       $('#od-json').empty();
       location.reload();
     }
+
+    function getQueryVariable(variable)
+    {
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+     }
   </script>
 </head>
 <body>
