--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         var apiEndPointUrlBase = "https://microsoft-my.sharepoint.com/personal/rgregg_microsoft_com";
         if (getQueryVariable("ppe") == 1)
           apiEndPointUrlBase = "https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net"
+        document.getElementyById("onedriveUrl").value = apiEndPointUrlBase;
 
         var businessPreproductionAppInfo = {
           "clientId": "50b5a58e-71e3-49c3-b5ad-67cf0cd4f19d",
