--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-rles<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>onedrive explorer</title>
@@ -54,7 +54,7 @@ rles<!DOCTYPE html>
           provideAppInfo(businessProductionAppInfo);
 
         oneDriveApiRoot = document.getElementById("onedriveUrl").value + "/_api/v2.0";
-        showThumbnails = true;
+        showThumbnails = false;
         setOneDriveTitle("OneDrive for Business");
         challengeForAuth();
       }
