--- a/index.html
+++ b/index.html
@@ -7,59 +7,23 @@
   <script id="odauth" src="odauth.js"></script>
 
   <script>
-    function signInToOneDrive(personal)
+    function signInToOneDrive()
     {
-      if (personal)
-      {
-        var personalAppInfo = {
-          "clientId": "000000004C14C142",
-          "scopes": "onedrive.readonly wl.signin",
-          "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
-          "authServiceUri": "https://login.live.com/oauth20_authorize.srf"
-        };
-        provideAppInfo(personalAppInfo);
-        oneDriveApiRoot = "https://api.onedrive.com/v1.0";
-        showThumbnails = true;
-        setOneDriveTitle("OneDrive - Personal");
-        challengeForAuth();
-      }
-      else
-      {
-        var apiEndPointUrlBase = "https://microsoft-my.sharepoint.com/personal/rgregg_microsoft_com";
-        if (getQueryVariable("ppe") == 1)
-          apiEndPointUrlBase = "https://prepsp-my.spoppe.com/personal/billtest_prepsp_ccsctp_net"
-        oneDriveUri = apiEndPointUrlBase;
-        document.getElementById("onedriveUrl").value = oneDriveUri;
-        //var oneDriveUri = document.getElementById("onedriveUrl").value;
-        var odbLocation = getUrlParts(oneDriveUri);
+      var graphAppInfo = {
+        "clientId": "f6a61494-e045-45b1-acc0-903090ed248c",
+        "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
+        "scopes": "files.read",
+        "authServiceUri": "https://login.microsoftonline.com/common/oauth2/v2.0/authorize"
+      };
 
-        var businessPreproductionAppInfo = {
-          "clientId": "50b5a58e-71e3-49c3-b5ad-67cf0cd4f19d",
-          "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
-          "resourceUri": "https://" + odbLocation.hostname,
-          "authServiceUri": "https://login.windows-ppe.net/common/oauth2/authorize"
-        };
+      provideAppInfo(graphAppInfo);
 
-        var businessProductionAppInfo = {
+      oneDriveApiRoot = "https://graph.microsoft.com/beta/me";
+      showThumbnails = true;
+      setOneDriveTitle("OneDrive - Microsoft Graph");
+      challengeForAuth();
 
-          "clientId": "d3fe7b01-77c1-4fcc-beb5-c1a9b63f13b1",
-          "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
-          "resourceUri": "https://" + odbLocation.hostname,
-          "authServiceUri": "https://login.windows.net/common/oauth2/authorize"
-        };
-
-        if (getQueryVariable("ppe") == 1)
-          provideAppInfo(businessPreproductionAppInfo);
-        else
-          provideAppInfo(businessProductionAppInfo);
-
-        oneDriveApiRoot = document.getElementById("onedriveUrl").value + "/_api/v2.0";
-        showThumbnails = false;
-        setOneDriveTitle("OneDrive for Business");
-        challengeForAuth();
-      }
       saveToCookie( { "apiRoot": oneDriveApiRoot, "thumbs": showThumbnails, "signedin": true } );
-
       return false;
     }
 
@@ -148,9 +112,7 @@
 <body>
   <div id="od-site" style="background-color: #094AB2; color: white; width: 100%; height: 50px; font-size: 24pt; font-family: 'Segoe UI'; margin-bottom: 10px; padding-left: 10px;">Choose a OneDrive</div>
   <div id="od-login" style="display: hidden">
-    <input id="onedriveUrl" type="hidden" value="https://microsoft-my.sharepoint.com/personal/rgregg_microsoft_com" style="width: 400px" />
-    <a href="#" onclick="signInToOneDrive(true)">Sign in to OneDrive</a>&nbsp;&nbsp;
-    <a href="#" onclick="signInToOneDrive(false)">Sign in to OneDrive for Business</a>
+    <a href="#" onclick="signInToOneDrive()">Sign in to OneDrive</a>&nbsp;&nbsp;
   </div>
   <div id="od-logoff" style="display: hidden">
     <a href="#" onclick="signOut()">Sign Out</a>
@@ -162,7 +124,7 @@
     <div id="od-json" class="od-pagecol"></div>
   </div>
   <script>
-    var oneDriveApiRoot = "https://api.onedrive.com/v1.0";
+    var oneDriveApiRoot = "https://graph.microsoft.com/beta/me";
     var showThumbnails = true;
 
     var data = loadFromCookie();
