--- a/index.html
+++ b/index.html
@@ -1,43 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>onedrive explorer</title>
+  <title>OneDrive Browser Sample</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script id="odauth" src="odauth.js"></script>
-
+  <link rel="icon" href="https://d.sfx-df.ms/images/favicon.ico" type="image/x-icon">
+  <link rel="mask-icon" href="https://d.sfx-df.ms/images/mask_icon.svg" color="#094AB2">
   <script>
     function signInToOneDrive()
     {
-      var appInfo = null;
-
-      if (getQueryVariable("usev2auth") == 1)
-      {
-        // Use v2.0 auth end point and scopes
-        appInfo = {
-          "clientId": "f6a61494-e045-45b1-acc0-903090ed248c",
-          "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
-          "scopes": "files.read",
-          "authServiceUri": "https://login.microsoftonline.com/common/oauth2/v2.0/authorize"
-        };
-      }
-      else
-      {
-        // Use the v1.0 auth end point and explicitly defined permissions (no scope)
-        appInfo = {
-          "clientId": "d3fe7b01-77c1-4fcc-beb5-c1a9b63f13b1",
-          "redirectUri": "https://onedrive-explorer-test.azurewebsites.net/callback.html",
-          "resourceUri": "https://graph.microsoft.com",
-          "authServiceUri": "https://login.microsoftonline.com/common/oauth2/authorize"
-        };
-      }
-
-
+      var appInfo = {
+        "clientId": "e9a57c07-69e4-41f5-b868-0f123d2fda17",
+        "redirectUri": "http://localhost:9999/callback.html",
+        "scopes": "user.read files.readwrite",
+        "authServiceUri": "https://login.microsoftonline.com/common/oauth2/v2.0/authorize"
+      };
       provideAppInfo(appInfo);
 
-      oneDriveApiRoot = "https://graph.microsoft.com/beta/me";
+      oneDriveApiRoot = "https://graph.microsoft.com/v1.0/me";
       showThumbnails = true;
-      // setOneDriveTitle("OneDrive");
       challengeForAuth();
 
       saveToCookie( { "apiRoot": oneDriveApiRoot, "thumbs": showThumbnails, "signedin": true } );
@@ -127,13 +109,18 @@
   </script>
 </head>
 <body>
-  <div id="od-site" style="background-color: #094AB2; color: white; width: 100%; height: 50px; font-size: 24pt; font-family: 'Segoe UI'; margin-bottom: 10px; padding-left: 10px;">OneDrive Explorer - JavaScript</div>
-  <div id="od-login" style="display: hidden">
-    <a href="#" onclick="signInToOneDrive()">Sign in to OneDrive</a>&nbsp;&nbsp;
+  <div id="od-site">
+    <div id="od-commands">
+      <div id="od-login" style="display: hidden">
+        <a href="#" onclick="signInToOneDrive()">Sign in to OneDrive</a>&nbsp;&nbsp;
+      </div>
+      <div id="od-logoff" style="display: hidden">
+        <a href="#" onclick="signOut()">Sign Out</a>
+      </div>
+    </div>
+    <div id="od-title">OneDrive Explorer Sample - JS</div>
   </div>
-  <div id="od-logoff" style="display: hidden">
-    <a href="#" onclick="signOut()">Sign Out</a>
-  </div>
+  
   <div id="od-loading"></div>
   <div id="od-breadcrumb"></div>
   <div id="od-content">
@@ -218,7 +205,7 @@
         if (segment) {
           runningPath = runningPath + '/' + encodeURIComponent(segment);
         } else {
-          segment = 'root';
+          segment = 'Files';
         }
 
         $('<a>').
@@ -265,7 +252,8 @@
           //  "for the item i'm addressing, include its thumbnails and children,
           //   and for each of the children, include its thumbnails. for those
           //   thumbnails, return the 'large' size"
-          var odquery = showThumbnails ? "?$expand=thumbnails,children($expand=thumbnails($select=large))" : "?$expand=children";
+          var thumbnailSize = "large"
+          var odquery = showThumbnails ? "?expand=thumbnails,children(expand=thumbnails(select=" + thumbnailSize + "))" : "?expand=children";
 
           $.ajax({
             url: odurl + odquery,
@@ -288,7 +276,8 @@
                 // '/children' directly instead of '/parent?expand=children', then
                 // they'll be in an array called 'data'
                 var decodedPath = decodeURIComponent(path);
-                document.title = "1drv " + decodedPath;
+                document.title = "OneDrive Browser" + ((decodedPath.length > 0) ? " - " + decodedPath : "");
+                  
                 updateBreadcrumb(decodedPath);
                 var children = data.children || data.value;
                 if (children && children.length > 0) {
@@ -312,11 +301,15 @@
                     if (item.folder) {
                       tile.addClass("folder");
                     }
+                    if (item.file) {
+                      tile.addClass("file");
+                    }
 
                     if (item.thumbnails && item.thumbnails.length > 0) {
+                      var container = $("<div>").attr("class", "img-container").appendTo(tile)
                       $("<img>").
-                        attr("src", item.thumbnails[0].large.url).
-                        appendTo(tile);
+                        attr("src", item.thumbnails[0][thumbnailSize].url).
+                        appendTo(container);
                     }
 
                     $("<div>").
@@ -325,7 +318,7 @@
                       appendTo(tile);
                   });
                 }
-                else {
+                else if (data.file) {
                   // 1-up view
                   var tile = $("<div>").
                     addClass("item").
@@ -346,6 +339,9 @@
                       attr("src", data.thumbnails[0].large.url).
                       appendTo(tile);
                   }
+                }
+                else {
+                  $('<p>No items in this folder.</p>').appendTo('#od-items');  
                 }
               } else {
                 $('#od-items').empty();
