--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     addClass("oneup").
                     appendTo("#od-items");
 
-                  var downloadUrl = data['webUrl'];
+                  var downloadUrl = data['@microsoft.graph.downloadUrl'];
                   if (downloadUrl) {
                     tile.click(function(){window.open(downloadUrl, "Download");});
                   }
