Add call to get a token

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#">Sign in to Microsoft</a>&nbsp;&nbsp;
       </div>
       <div id="od-logoff" style="display: hidden">
-        <a href="#">Sign Out</a>
+        <a href="#">Switch user</a>
       </div>
     </div>
     <div id="od-title">OneDrive Explorer Sample - JS</div>
